# neomutt-old

./: .gitignore  ChangeLog.neomutt  INSTALL.md  Makefile.am  Makefile.autosetup  README  README.md  addrbook.c  attach.c  attach.h  auto.def  body.h  browser.c  buffy.c  buffy.h  color.c  command_parse.c  commands.c  compose.c  configure.ac  copy.c  curs_lib.c  curs_main.c  dump.c  dump.h  editmsg.c  enter.c  format_flags.h  functions.c  functions.h  globals.h  handler.c  hdrline.c  hdrline.h  header.c  headers.c  help.c  history.h  hook.c  icommands.c  (+58 more)
address/: address.c  group.c
alias/: alias.c  config.c  dlg_alias.c  dlg_query.c
attach/: dlg_attach.c  recvattach.h
autocrypt/: autocrypt.c  config.c  dlg_autocrypt.c
browser/: config.c  dlg_browser.c  functions.c
color/: color.h  command.c  simple.c
compmbox/: compress.c  lib.h  path.c
compose/: attach.c  cbar.c  compose.c  config.c  envelope.c  functions.c  private.h
config/: dump.c  enum.c  helpers.c  helpers.h  set.h  sort.c  subset.c  types.h
conn/: gnutls.c  sasl.c
contrib/: gpg.rc  smime.rc
core/: account.c  account.h  lib.h  mailbox.c  mailbox.h  neomutt.c  neomutt.h  path.c
debian/: README.Debian  changelog  control  copyright  neomutt-common.dirs  neomutt-common.doc-base  neomutt-common.docs  neomutt-common.examples  neomutt-common.install  neomutt-common.manpages  neomutt-common.mime  neomutt.bug-control  neomutt.bug-script  neomutt.dirs  neomutt.install  neomutt.links  neomutt.lintian-overrides  rules  watch
debug/: account.c  (+4 more)
unit-test/: Makefile.am  cutest.h  driver.c  test_list.c
(+336 files in other folders)
